Fixed buttons spacing acting weird

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -91,8 +91,9 @@ $mainTextColor: #0BFF56;
 
             button
             {
-                border-width: 0 !important;
-                border-color: #00E101 !important;
+                // border-width: 0 !important;
+                // border-color: #00E101 !important;
+                border-color: transparent !important;
                 color: white !important;
                 background: rgba(0, 225, 1, .2) !important;
             }
